[package]
name = "dapp-mine-scenario"
version = "0.1.0"
authors = ["Moudbuom <mahmoudbaibars@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1.28"
mio = "0.6.19"
serde = "1.0.99"
serde_derive = "1.0.99"
serde_json = "1.0.40"